# ADRIA-domain-tools

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
src/: align_connectivity.py  clean_connectivity.py  main.py  schemas.py  strip_locations.py  utils.py  validators.py
src/validator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
