[project]
name = "validator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "h5netcdf>=1.7.3",
    "netcdf4>=1.7.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "xarray>=2025.12.0",
]

[project.scripts]
validator = "main:main"
strip-locations = "strip_locations:main"
clean-connectivity = "clean_connectivity:main"

[tool.uv]
package = true
